working on lab manual

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -112,9 +112,9 @@ Copyright \copyright\ \the\year\ \thanklessauthor
 
 \par\smallcaps{Published by the \thanklesspublisher}
 
-\par\smallcaps{\url{http://www.princeton.edu/manning3}}
+\par\smallcaps{\url{http://caligari.dartmouth.edu/\~jmanning}}
 
-\par License information.\index{license}
+%\par License information.\index{license}
 
 \par\textit{First printing, \monthyear}
 \end{fullwidth}
@@ -468,7 +468,9 @@ Add a link to the personnel spreadsheet in \href{https://redbooth.com/}{RedBooth
   project meetings and events.
 \item Add a line to your lab snippet template for this project.  (See
   \textit{Lab Snippets}.)
-\item Send a polite but brief email to all project personnel welcoming them to the
+\item Create a new
+  \href{https://groups.google.com/forum/#!overview}{Google Group} for
+  the project and invite all team members.  Via Google Groups, send a polite but brief message to all project personnel welcoming them to the
   project.  Include the following information:
 \begin{itemize}
 \item A 1-2 sentence description of the project.
@@ -489,21 +491,15 @@ Add a link to the personnel spreadsheet in \href{https://redbooth.com/}{RedBooth
 \end{itemize}
 \end{enumerate}
 
-\newpage
+%\newpage
 \section{Joining a project}
-
-
-
-%create shared evernote notebook; invite team members
-
-%create redbooth project; invite team members to project
-
-%project meeting (scheduled via doodle) with all relevant team members to create (project
-%lead should create drafts of these documents prior to meeting):
-%  roles spreadsheet
-%  proposed budget spreadsheet
-%  proposed timeline spreadsheet
-%  
+If you are starting a new project (as the project lead), you
+automatically ``join'' the project.  If you are a non-project lead
+team member, your agreement to join the project is officially
+signified when you add your initials to the project's Google Doc (sent
+out by the project lead) and agree to the project responsibilities
+outlined there.  All project communications should be sent via the
+project's Google Groups mailing list.
 
 
 \newpage
@@ -515,66 +511,219 @@ complex dynamic system we care about in our lab.  For example, we can
 use tools like calendars and other software packages to organize and
 understand our own temporal dynamics.  Our lab's scheduling policies
 are intended to facilitate lab member interactions between ourselves,
-our collaborators, and our experimental participants.
+our collaborators, and our experimental participants.  There are three
+basic tools the lab uses to organize and schedule events:
+\begin{itemize}
+\item \href{http://calendar.google.com}{Google Calendar}.  We use the
+  main lab calendar to keep track of lab-wide events including lab
+  meetings, conferences, important talks.  We use the DHMC events
+  calendar to keep track of important events and meetings at the
+  DHMC.  We use the out-of-lab calendar to keep track of known
+  absenses (e.g. illness, travel, holidays, etc.).  We use the
+  meetings calendar to keep track of scheduled meetings (regularly
+  scheduled meetings with Jeremy or senior lab members, project
+  meetings, etc.).  When you add an event, it is important to include
+  the following information as a comment (this does not apply to ``out-of-lab'' events):
+\begin{itemize}
+  \item Key contact names and contact information (email or phone)
+  \item Physical address (where the event will take place)
+  \item A brief description of the event and/or other relevant information
+  \item Attach any relevant documents via Google Docs
+\end{itemize}
+\item \href{http://www.doodle.com}{Doodle}.  We use Doodle to converge
+  on mutually good meeting times that fit (as well as possible) with
+  everyone's busy schedules.
+\item \href{http://www.groups.google.com}{Google Groups}.  We use
+  Google Groups to send coordination-related emails to all relevant
+  lab or project personnel.
+\end{itemize}
 
  \subsection{Attendance policy}
- As you move up in the lab hierarchy, our policy is to afford
- you increasing scheduling flexibility (which, in turn, assumes
- increasing responsibility on your part).  Increased
- \textit{scheduling flexibility} comes in the form of less frequent
- check-ins (e.g.\ times you are required to meet with your supervisor)
- and less structured research time (e.g.\ your level of independence
- as a researcher, as determined by your supervisor).  Increased
- \textit{responsibility} comes in the form of increased expectations
- placed on you as a researcher (in terms of research effort and
- productivity).
+ % As you move up in the lab hierarchy, our policy is to afford you
+ % increasing scheduling flexibility (which, in turn, assumes increasing
+ % responsibility on your part).  Increased \textit{scheduling
+ %   flexibility} comes in the form of less frequent check-ins (e.g.\
+ % times you are required to meet with your supervisor) and less
+ % structured research time (e.g.\ your level of independence as a
+ % researcher, as determined by your supervisor).  Increased
+ % \textit{responsibility} comes in the form of increased expectations
+ % placed on you as a researcher (in terms of research effort and
+ % productivity).  
+ We abide by a ``common sense'' attendance policy that relies on an
+ honor system.  If you cannot attend a lab event or meeting, your
+ privacy will be respected: you do not (generally speaking) need to
+ provide a reason for your absense (although you are honor bound not
+ to abuse this system!)-- but you are expected to responsibly manage
+ your schedule so that you get your work done nad minimize
+ inconvenience to others to the extent possible.  The one exception is
+ that if you seem to be
+ abusing this system (as determined by your supervisor), you may be
+ asked to provide additional information (in a way that does not
+ invade your privacy-- and if you are worried that this policy is overly
+ intrusive, please bring your concerns to Jeremy).  Here's the official
+ lab attendance policy:
+\begin{itemize}
+\item All absenses should be entered into the out-of-lab calendar.
+  This should be done prior to your absense if possible; the
+  out-of-lab calendar is used to track vacation time, sick leave, etc.
+  If you will be out of the lab unexpectedly, it is your
+  responsibility to notify your immediate supervisor (cc'ing Jeremy)
+  as well as anyone else your absense will affect (e.g. people you're
+  scheduled to meet with, etc.).  To enter an absense, simply create a
+  new out-of-lab event with your first name followed by the word
+  ``out.''  (E.g. if Jeremy is out of the lab he would create an event
+  called ``Jeremy out''.)  Out-of-lab events can be all day events,
+  multi-day events, or partial day events.  You do not need to (and
+  should not) label your event (e.g.\ sick time, vacation time,
+  conference time, etc.\ will be indistinguishable on the out-of-lab
+  calendar); this is done to protect the privacy of all lab members.
+\begin{itemize}
+\item If you are feeling sick, \textit{do not come into the office}.  We can
+  arrange virtual meetings (if you are feeling well enough) or
+  re-schedule as needed.  The health and safety of the lab is the top
+  priority.  Enter your expected ``out of lab'' duration into the
+  out-of-lab calendar (update as you have more information so that we
+  can correctly track your time).
+\item If you must be out for an unexpected emergency, simply give as
+  much notice as is possible.  Enter your expected ``out of lab''
+  duration into the out-of-lab calendar (update as you have more
+  information).
+\item If you know that you will be out of the lab well in advance
+  (e.g.\ classes, vacations, religious holidays, conferences, job interviews,
+  doctor appointments, etc.) enter this into the out-of-lab calendar.  This should be done
+  at least 2 weeks in advance, and preferably as far in advance as
+  possible.  Enter this information into the out-of-lab calendar.
+\end{itemize}
+\item You are expected to attend all lab meetings and other regularly
+  scheduled meetings that are directly relevant to your work in the
+  lab.
+\item If you are scheduled to present at a conference (i.e.\ you
+  submit an abstract and the abstract is accepted as a talk or
+  poster), you are expected to attend the conference to present your
+  work.
+\item You are strongly encouraged to attend relevant PBS talks, DHMC
+  meetings and talks, thesis defenses, and other relevant lab and/or
+  Dartmouth-affiliated events.  If you are overwhelmed with other
+  work, have a conflicting meeting, are running an experimental
+  participant, or are out of the lab for other reasons, you do not
+  need to provide a reason for your absense (unless you've previously agreed to
+  attend).
+\item You are expected to tend to your out-of-lab responsibilities
+  (classes, family duties, etc.) as a top priority.  If these conflict
+  with your lab responsibilities please discuss with your supervisor
+  and/or Jeremy as applicable.
+\end{itemize}
+
+
+ \section{Lab finances}
+ As with most academic research labs, we (sadly!) must conduct our
+ research within a limited research budget.  The lab's financial
+ policy is the following: we will do whatever is possible to ensure
+ you have the equipment and resources you \textit{need} to do your best work.
+ If you can adequately justify an expense (typically done when proposing a
+ project budget except when first starting out in the lab) and sufficient funds
+ are available, then we will spend what it takes to get the job done.
+ If you cannot justify an expense, or if the lab does not have
+ sufficient funds, then we will likely need to get creative by
+ figuring out how to get the job done anyway on a seemingly too-small
+ budget.  Usually we'll find ourselves somewhere in the middle of this
+ continuum, which will help us to stretch our limited budget as far as
+ possible while not making ourselves crazy or losing too much
+ productivity in the process.
+
+\subsection{Startup money}
+Startup money is \textit{unrestricted} money that may be used to
+purchase equipment, hire personnel, pay travel expenses, fund lab
+renovations, and grease the day-to-day wheels of the labs existance.
+Critically, startup money may be used for any project, and is
+therefore extremely valuable and special.  (Grant money is generally
+designated for a specific project and may only be used for that one
+project.)  Also, startup money never gets replenshed, which adds an
+extra dimension of caution to the mix.
+
+As a new lab member, you will get your own little share of the lab's
+startup money.  \marginnote{Although you'll get some degree of flexibility with
+respect to how you choose to spend this money (with more senior lab
+members getting more flexibility), all purchase decisions must
+still be approved by Jeremy (just as Jeremy's purchases must in turn
+be approved by the administration, whose purchases must in turn be
+approved by the senior administration, and so on).  Futher, all
+equipment you buy is the property of the lab.  If you leave the lab,
+you are expected to return the lab's property!}  Your budget will
+generally consist of:
+\begin{itemize}
+\item An intitial pool of money to be used to buy a computer (laptop,
+  desktop, or both) plus any minor computer-related accessories you'll
+  need (monitor, keyboard/mouse, etc.).  You may also be allocated an
+  existing computer from the available lab stock in leu of a dollar amount.  Any computer
+  equipment you need, repairs, or other computing costs you incur,
+  will be expected to come from this pool.
+\item A yearly travel budget.  Any lab-related travel you do will be
+  expected to come from this pool.
+\item An equipment budget.  Any experiment-specific equipment you buy
+  will be expected to come from this pool.
+\item A ``miscellaneous'' budget.  This is expected to cover things
+  like textbooks, publication costs, poster printing, etc.
+\end{itemize}
+
+The precise amount of your mini startup fund will depend on:
+\begin{itemize}
+\item How long you expect
+to stay in the lab.  For example, a short-term rotation or senior thesis
+student will generally be allocated less money than a longer term
+student, research assistant, or postdoctoral researcher.
+\item What research you expect to do.  Some people need more powerful
+  (and more expensive) equipment to get their work done, and may be
+  allocated more money accordingly.
+\item How much you are expected to travel.  If you're going to be
+  going to lots of conferences, you'll need more money to get there!
+\end{itemize}
+
+ \subsection{Applying for research and training grants}
+
+ \subsection{Equipment policy}
+ \subsection{Computers}
+ \subsection{Other research equipment}
+
+ \subsection{Travel policy}
+
+ \subsection{Poster printing}
+
+ \subsection{Publication costs}
+
+ \subsection{Subject payments}
 
 
 
 
 
- \subsection{Lab calendar}
-% \subsection{Scheduling lab events using Doodle}
- \subsection{Mandatory lab events}
- \subsection{Optional lab events}
- \subsection{Scheduling participants}
-
-%\section{Research expectations}
-
-% \section{Lab finances}
-% \subsection{Equipment policy}
-% \subsubsection{Computers}
-% \subsubsection{Other research equipment}
-
-% \subsection{Travel policy}
-
-% \subsection{Poster printing}
-
-% \subsection{Publication costs}
-
-% \subsection{Subject payments}
-
-
-% \subsection{Applying for research and training grants}
-
-
-% \section{Lab mailing list and contact information}
+ \section{Lab mailing list and contact information}
 
 \section{Task management using Redbooth}
 
  \section{Code and document management using Bitbucket}\label{sec:bitbucket}
  We use \href{https://www.bitbucket.org/}{Bitbucket}\marginnote{The lab's standard practice is to use the
- Git version control system, although lab members may use Mercurial
- (Hg) instead at their discretion.  All projects \textit{must} be
- managed using either Git or Hg via Bitbucket.} as a means of organizing, maintaining, and sharing
+ Git version control system.  All projects \textit{must} be
+ managed using Git and hosted on Bitbucket unless there is a
+ compelling (and documented!) reason to use another system.} as a means of organizing, maintaining, and sharing
  our code and documents.  Bitbucket provides a unified framework for
  documenting changes over time, managing and integrating code from
  multiple users, and submitting bug reports or feature requests. 
 Atlassian's
  \href{https://www.atlassian.com/software/sourcetree/overview?_mid=1ba3573dadf246f44f2a97bc50bfd72e&gclid=Cj0KEQiA4OqnBRDAj9aazvPji9ABEiQANq28oBGvgRhznXBb_RDL6QRe0IM7vvEUXFkRDoWBSbpmsmAaAkCE8P8HAQ}{SourceTree}
  client provides a convenient and easy-to-use desktop client for OS X
- and Windows systems.  Each project should have its own Bitbucket
- repository, and should be organized using the following directory structure:
+ and Windows systems.  Each project should have \textit{two} Bitbucket
+ repositories.  The first repository ($<$projectname$>$-main) is used to
+ manage experiment and analysis code and related (non-data) files.
+ The second repository ($<$projectname$>$-communications) is used to
+ manage documents and images (papers, posters, slides, etc.) related
+ to \textit{communicating} the work to the broader scientific
+ community.  This two repository system is intended to prevent the main project
+ repository (which will eventually be shared publically in most cases)
+ from (a) growing too large and (b) containing information or files
+ that would not normally be shared publically (e.g.\ in-progress
+ drafts of manuscripts, raw image files for posters, editable figures,
+ etc.).  The \textit{main} repository should be organized using the following directory structure:
 \begin{itemize}
 \item \textit{code/main}: contains code for running experiments and
   analyses.  When the paper is published, this folder (and/or its contents) will be made
@@ -615,8 +764,11 @@ Atlassian's
   \item A document listing budget codes for grants that fund any part
     of the project  
 \end{itemize}
+\end{itemize}
 
-\item \textit{docs/papers}: each paper should exist as a sub-folder of
+The \textit{communications} repository should be organized using the following directory structure:
+\begin{itemize}
+\item \textit{papers}: each paper should exist as a sub-folder of
   this directory.  Each paper's sub-folder should contain the following:
 \begin{itemize}
 \item \textit{paper\_name.tex}: main source file for document text
@@ -638,7 +790,7 @@ Atlassian's
   included in the source folders.
 \item \textit{replicate}: sub-folder containing links to the data and code
   relevant to the paper, along with \textbf{detailed} helpful
-  instructions that would allow someone to download the project's
+  instructions that would allow someone to download the project's \textit{main}
   Bitbucket repository and data, and reproduce figures from each paper
   from scratch (assuming they had the appropriate hardware to run the
   analyses).  The instructions should also list system requirements
@@ -646,53 +798,54 @@ Atlassian's
   and installation instructions).  This folder should also contain a
   ``make\_figs'' script that, when run, should reproduce the basic 
   versions of the paper's figures (e.g.\ before editing fonts and line
-  styles or composing figure panels in Illustrator).
+  styles or composing figure panels in Illustrator), assuming the
+  \textit{main} project repository has been downloaded to the specified location.
 \end{itemize}
-\item \textit{docs/posters}: each poster should exist as a sub-folder
+\item \textit{posters}: each poster should exist as a sub-folder
   of this directory.  Each poster's sub-folder should contain:
 \begin{itemize}
-  \item The main .ai, .pdf, or .pptx poster file.
+  \item The main .ai, .pdf, .pptx, or .tex poster file.
   \item A copy of the associated conference abstract or paper.
   \item A README.txt file containing bibliographic information for the
     poster.
-  \item \textit{source}: sub-folder containing all source materials
-    linked to in the main poster file.  This folder may contain other
-    sub-folders as needed (at the discretion of the poster maker).
 \end{itemize}
-\item \textit{docs/slides}: sub-folder containing the .key, .pptx, or
+\item \textit{slides}: sub-folder containing the .key, .pptx, or
   .pdf files for each presentation.
-\item \textit{docs/slides/source}: sub-folder containing all source
-  materials (figures, etc.) linked to in any presentation.
+\item \textit{source}: sub-folder containing all source
+  materials (figures, etc.) linked to in any poster or presentation.  The source
+  directory may contain additional sub-folders, but does not need
+  to be separated by poster or presentation.  This is because oftentimes the
+  same source file(s) will be shared across multiple posters or presentations.
 \end{itemize}
-% \section{Data repository}
-% \subsection{Lab Dropbox account}
 
-% \section{Internal Review Board (IRB) approval process}
-% \subsection{List of active protocols}
-% \subsection{List of inactive protocols}
+ \section{Data repository}
+ \subsection{Lab Dropbox account}
 
-
-% \chapter{Official lab techniques}\label{ch:techniques}
-% \section{Document formatting using \latex}
-% \section{Coding experiments using PsychToolbox}
-% \section{Data analysis using MATLAB and Python}
+ \section{Internal Review Board (IRB) approval process}
+ \subsection{List of active protocols}
+ \subsection{List of inactive protocols}
 
 
+ \chapter{Official lab techniques}\label{ch:techniques}
+ \section{Document formatting using \LaTeX}
+ \section{Coding experiments using PsychToolbox}
+ \section{Data analysis using MATLAB and Python}
 
-% \section{Behavioral experiments}
 
-% \section{fMRI}
-% \subsection{Running fMRI participants}
-% \subsection{Data preprocessing}
-% \subsection{Multivariate Pattern Analysis}
-% \subsection{Topographic Factor Analysis}
 
-% \section{Scalp EEG and ECoG}
-% \subsection{Running EEG participants}
+ \section{Behavioral experiments}
 
-% \subsection{Running hospital patients (ECoG)}
+ \section{fMRI}
+ \subsection{Running fMRI participants}
+ \subsection{Data preprocessing}
+ \subsection{Multivariate Pattern Analysis}
+ \subsection{Topographic Factor Analysis}
 
-% \section{Cluster computing}
+ \section{Scalp EEG and ECoG}
+ \subsection{Running EEG participants}
+ \subsection{Running hospital patients (ECoG)}
+
+ \section{Cluster computing}
 
 
 % Citation example \cite{Tufte2001}, notice how the citation is in the margin. This is an example of how to add something to the index at the end of the document.\index{citation}
