more lab manual edits...

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -677,7 +677,14 @@ student, research assistant, or postdoctoral researcher.
   allocated more money accordingly.
 \item How much you are expected to travel.  If you're going to be
   going to lots of conferences, you'll need more money to get there!
+\item How much you're expected to publish.
 \end{itemize}
+
+%STOPPED HERE
+You will be allocated a small (default) amount of money when you start
+in the lab.  To get additional money you can write a short (1-2 page)
+mini ``grant'' proposal describing how you want to use the money.
+
 
  \subsection{Applying for research and training grants}
 
