new lab logo, minor lab manual edits, website design proposal

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -648,9 +648,12 @@ members getting more flexibility), all purchase decisions must
 still be approved by Jeremy (just as Jeremy's purchases must in turn
 be approved by the administration, whose purchases must in turn be
 approved by the senior administration, and so on).  Futher, all
-equipment you buy is the property of the lab.  If you leave the lab,
+equipment you buy is the property of the lab.  With the exception of
+laptop computers, all equipment, books, etc. are expected to remain in
+the lab.  If you leave the lab,
 you are expected to return the lab's property!}  Your budget will
-generally consist of:
+generally consist of:\marginnote{NOTE: ``Mini startup'' money may not be used
+  to pay anyone's salary.}
 \begin{itemize}
 \item An intitial pool of money to be used to buy a computer (laptop,
   desktop, or both) plus any minor computer-related accessories you'll
@@ -672,21 +675,25 @@ The precise amount of your mini startup fund will depend on:
 to stay in the lab.  For example, a short-term rotation or senior thesis
 student will generally be allocated less money than a longer term
 student, research assistant, or postdoctoral researcher.
-\item What research you expect to do.  Some people need more powerful
-  (and more expensive) equipment to get their work done, and may be
+\item What research you expect to do.  Some people need special
+  equipment, money for subjects, etc., and may be
   allocated more money accordingly.
 \item How much you are expected to travel.  If you're going to be
   going to lots of conferences, you'll need more money to get there!
 \item How much you're expected to publish.
 \end{itemize}
 
-%STOPPED HERE
-You will be allocated a small (default) amount of money when you start
-in the lab.  To get additional money you can write a short (1-2 page)
-mini ``grant'' proposal describing how you want to use the money.
-
+You will be allocated a modest (default) amount of money when you start
+in the lab.  To get additional money, you can write a short (1-2 page)
+mini ``grant'' proposal describing how you want to use the money.  You
+may apply as often as you want and there is no limit to how much you
+request (although in practice funding decisions will depend on lab
+priorities, availability of funds, etc.).  You may appeal a decision by
+submitting a revised proposal.
 
  \subsection{Applying for research and training grants}
+All lab members are strongly encouraged to apply for research and/or
+training grants.  Obtaining independent funding is how you become 
 
  \subsection{Equipment policy}
  \subsection{Computers}
