minor edits to lab manual

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -693,7 +693,9 @@ submitting a revised proposal.
 
  \subsection{Applying for research and training grants}
 All lab members are strongly encouraged to apply for research and/or
-training grants.  Obtaining independent funding is how you become 
+training grants.  Obtaining independent funding is how you become a PI
+(P5) on a project, and affords you a substantially higher level of
+research independence.  
 
  \subsection{Equipment policy}
  \subsection{Computers}
