working on lab manual

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -163,8 +163,9 @@ references related to the techniques we employ in our research.
   at least one edit.  You could correct a typo, clarify something
   that's unclear, add a comment, etc.  Focus your edits or additions
   on sections that are most relevant to the work you want to do.
-  Importantly, be sure to push your edits to the manual's github
-  repository so that everyone can benefit.} Every new lab member
+  Importantly, be sure to push your edits to the manual's
+  \href{https://bitbucket.org/manning3/lab-manual}{Bitbucket
+    repository} so that everyone can benefit.} Every new lab member
 should read the latest version of this lab manual in detail and
 reference it later as needed.  Periodically throughout the document,
 you will see margin notes with listed \texttt{TASK} items.  Completing
@@ -229,22 +230,22 @@ and expectations. Importantly, the lab hierarchy does \textit{not}
 serve an excuse for disrespecting or discounting the opinions of lab
 members at similar or different levels of the hierarchy.  Each lab
 member's position in this hierarchy is determined by two factors: the
-lab member's job title and the amount of time they have worked in the
+lab member's job title and the length of time they have worked in the
 lab.  Moving ``up'' in the hierarchy generally entails working in the
 lab for some amount of time, gaining experience by working in other
-(academic or industrial)
-labs, and/or earning academic degrees.  The lab hierarchy is intended
-to serve as a general framework for estimating what is expected of
-each lab member (e.g.\ in terms of research, supervising and
-mentoring, training roles, and other lab responsibilities).  The
-hierarchy also serves as a general framework for determining lab
-member salaries and benefits.  There are two branches of the lab
-hierarchy; although personnel on different branches may have
-overlapping responsibilities, the first branch is primarly concerned
-with directly carrying out lab research and the second branch is
-primariy concerned with supporting or managing the lab's research
-objectives.  The research-focused levels of the lab hierarchy are
-defined as follows: \newcounter{levels}
+(academic or industrial) labs, and/or earning academic degrees.  The
+lab hierarchy is intended to serve as a general framework for
+estimating what is expected of each lab member (e.g.\ in terms of
+research, supervising and mentoring, training roles, and other lab
+responsibilities).  The hierarchy also serves as a general framework
+for determining lab member-specific budgets (e.g.\ resource
+allocation, salary if applicable, travel expenses, etc.).  There are two
+branches of the lab hierarchy; although personnel on different
+branches may have overlapping responsibilities, the first branch is
+primarly concerned with directly carrying out lab research and the
+second branch is primarily concerned with supporting or managing the
+lab's research objectives.  The research-focused levels of the lab
+hierarchy are defined as follows: \newcounter{levels}
 \begin{list}{R\arabic{levels}-$x$:~}{\usecounter{levels}}
 \item \textbf{Undergraduate research
     assistants.}\marginnote{Research-focused levels of the lab hierarchy}  This category
@@ -344,24 +345,26 @@ discresion of the lab director.}
   An example might be an undergraduate research assistant who helps to
   run participants but who does not contribute to any analyses or to
   the itellectual development of the project.
-\item \textbf{Junior co-author.}  This role is generally assumed by
-  junior lab members (e.g.\ research assistants, junior grad
-  students).  Junior co-authors assist with all aspects of carrying
-  out the research (e.g.\ helping to write code, run participants,
-  generate graphics, review communications, etc.).  The primary
-  difference from a senior co-author role is that junior co-authors
-  provde less conceptual guidance than senior co-authors.  Junior
-  co-authors will generally hold ``middle author'' positions on
-  communications related to the project.
-\item \textbf{Senior co-author.}  This role is generally assumed by
-  senior lab members (e.g.\ postdocs, senior grad students).  Senior
-  co-authors provide conceptual guidance, research assistance (though
-  to a lesser extent than a project lead), experimental assistance
-  (though to a lesser extant than a project lead), and writing
-  assistance (e.g.\ providing comments on manuscript drafts, posters,
-  and/or slides).  Senior co-authors will generally hold ``middle
-  author'' positions on communications related to the project.
-\item \textbf{Project lead.}  This person is responsible for
+\item \textbf{Junior co-author.}  This role is generally (but not
+  always) assumed by junior lab members (e.g.\ research
+  assistants, junior grad students).  Junior co-authors assist with
+  all aspects of carrying out the research (e.g.\ helping to write
+  code, run participants, generate graphics, review communications,
+  etc.).  The primary difference from a senior co-author role is that
+  junior co-authors provde less conceptual guidance than senior
+  co-authors.  Junior co-authors will generally hold ``middle author''
+  positions on communications related to the project.
+\item \textbf{Senior co-author.}  This role is generally (but not
+  always) assumed by senior lab members (e.g.\ postdocs, senior grad
+  students).  Senior co-authors provide conceptual guidance, research
+  assistance (though to a lesser extent than a project lead),
+  experimental assistance (though to a lesser extant than a project
+  lead), and writing assistance (e.g.\ providing comments on
+  manuscript drafts, posters, and/or slides).  Senior co-authors will
+  generally hold ``middle author'' positions on communications related
+  to the project.
+\item \textbf{Project lead.}  ``\textit{If it's your project, then you
+    are the project lead...}''  This person is responsible for
   overseeing day-to-day operations for the project, and reports to the
   PI (or co-PI).  This person's responsibilities include: writing and
   running experiments (or directly overseeing these processes), coding
@@ -438,9 +441,9 @@ take:
   Jeremy).
 \item Create a \href{https://docs.google.com/}{Google Docs}\marginnote{\texttt{TASK:}
     Create a Google account if you don't already have one (or if you'd
-    like to create a new one for lab-only use).  Make sure your
-    account is linked with the lab's Google Apps account, which will
-    give you access to extra storage space and some other additional functionality.}
+    like to create a new one for lab-only use).}  %Make sure your
+    %account is linked with the lab's Google Apps account, which will
+    %give you access to extra storage space and some other additional functionality.}
   spreadsheet outlining all project personnel and their project roles,
   and share it with all team member (the PI may ask other project
   members to fill in personal information and contact details).  This should
@@ -554,7 +557,7 @@ basic tools the lab uses to organize and schedule events:
  privacy will be respected: you do not (generally speaking) need to
  provide a reason for your absense (although you are honor bound not
  to abuse this system!)-- but you are expected to responsibly manage
- your schedule so that you get your work done nad minimize
+ your schedule so that you get your work done and minimize
  inconvenience to others to the extent possible.  The one exception is
  that if you seem to be
  abusing this system (as determined by your supervisor), you may be
@@ -578,7 +581,7 @@ basic tools the lab uses to organize and schedule events:
   conference time, etc.\ will be indistinguishable on the out-of-lab
   calendar); this is done to protect the privacy of all lab members.
 \begin{itemize}
-\item If you are feeling sick, \textit{do not come into the office}.  We can
+\item If you are feeling sick, \textit{do not come into the lab}.  We can
   arrange virtual meetings (if you are feeling well enough) or
   re-schedule as needed.  The health and safety of the lab is the top
   priority.  Enter your expected ``out of lab'' duration into the
@@ -624,7 +627,7 @@ basic tools the lab uses to organize and schedule events:
  project budget except when first starting out in the lab) and sufficient funds
  are available, then we will spend what it takes to get the job done.
  If you cannot justify an expense, or if the lab does not have
- sufficient funds, then we will likely need to get creative by
+ sufficient funds, then we will need to get creative by
  figuring out how to get the job done anyway on a seemingly too-small
  budget.  Usually we'll find ourselves somewhere in the middle of this
  continuum, which will help us to stretch our limited budget as far as
